syntax = "proto3";
import "Types.proto";
option java_package = "com.visitor.protocol";

/**
 * Messages that will be send by the server during a game
 */

//This will be send when a game state changes to notify the client to update display 
message UpdateGameState {
    GameState game = 1;
}

//This will be send when a player loses a game
message GameEnd {
    GameState game = 1;
    bool win = 2;
}

//This will be send when a player needs order a list of cards
message OrderCards {
    GameState game = 1;
    repeated Card cardsToOrder = 2;
}

message SelectFrom {
    SelectFromType messageType = 1;
    GameState game = 2;
    int32 selectionCount = 3;
    repeated Card candidates = 4;
    repeated string canSelected = 5;
    repeated string canSelectedPlayers = 7;
    bool upTo = 6;
}

message SelectXValue {
    GameState game = 1;
    int32 maxXValue = 2;
}

message SelectAttackers {
    GameState game = 1;
    repeated string canAttack = 2;
}

message SelectBlockers {
    GameState game = 1;
    repeated Blocker canBlock = 2;
}

message ServerGameMessage {
    oneof payload {
        UpdateGameState         updateGameState = 8;
        GameEnd                 gameEnd = 10;
        OrderCards              orderCards = 12;
        SelectFrom              selectFrom = 13;
        SelectXValue            selectXValue = 19;
        SelectAttackers         selectAttackers = 20;
        SelectBlockers          selectBlockers = 21;
    }
}
